tests-integration/fixtures/checking/127_derive_eq_simple/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Proxy :: forall (t0 :: Type) (a :: (t0 :: Type)). Proxy @(t0 :: Type) (a :: (t0 :: Type))
MkNoEq :: NoEq
MkContainsNoEq :: NoEq -> ContainsNoEq

Types
Proxy :: forall (t0 :: Type). (t0 :: Type) -> Type
NoEq :: Type
ContainsNoEq :: Type

Data
Proxy
  Quantified = :1
  Kind = :0

NoEq
  Quantified = :0
  Kind = :0

ContainsNoEq
  Quantified = :0
  Kind = :0


Roles
Proxy = [Phantom]
NoEq = []
ContainsNoEq = []

Derived
derive forall (t1 :: Type). Eq (Proxy @(t1 :: Type) (a :: (t1 :: Type)) :: Type)
derive Eq (ContainsNoEq :: Type)

Diagnostics
error[NoInstanceFound]: No instance found for: Eq NoEq
  --> 13:1..13:32
   |
13 | derive instance Eq ContainsNoEq
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
